--- a/src/csm/CSM.csproj
+++ b/src/csm/CSM.csproj
@@ -80,8 +80,9 @@
 		<Compile Include="Commands\Data\Internal\FinishTransactionCommand.cs" />
 		<Compile Include="Commands\Data\Internal\PlayerListCommand.cs" />
 		<Compile Include="Commands\Data\Internal\RequestWorldTransferCommand.cs" />
-		<Compile Include="Commands\Data\Internal\SlowdownCommand.cs" />
-		<Compile Include="Commands\Data\Internal\WorldTransferCommand.cs" />
+                <Compile Include="Commands\Data\Internal\SlowdownCommand.cs" />
+                <Compile Include="Commands\Data\Internal\VehiclePositionCommand.cs" />
+                <Compile Include="Commands\Data\Internal\WorldTransferCommand.cs" />
 		<Compile Include="Commands\Handler\Game\SpeedPauseReachedHandler.cs" />
 		<Compile Include="Commands\Handler\Game\SpeedPauseResponseHandler.cs" />
 		<Compile Include="Commands\Handler\Game\SpeedPauseRequestHandler.cs" />
@@ -95,8 +96,9 @@
 		<Compile Include="Commands\Handler\Internal\FinishTransactionHandler.cs" />
 		<Compile Include="Commands\Handler\Internal\PlayerListHandler.cs" />
 		<Compile Include="Commands\Handler\Internal\RequestWorldTransferHandler.cs" />
-		<Compile Include="Commands\Handler\Internal\SlowdownHandler.cs" />
-		<Compile Include="Commands\Handler\Internal\WorldTransferHandler.cs" />
+                <Compile Include="Commands\Handler\Internal\SlowdownHandler.cs" />
+                <Compile Include="Commands\Handler\Internal\VehiclePositionHandler.cs" />
+                <Compile Include="Commands\Handler\Internal\WorldTransferHandler.cs" />
 		<Compile Include="Container\ChatCommand.cs" />
 		<Compile Include="Container\ChirperMessage.cs" />
 		<Compile Include="Container\Tuple.cs" />
