--- a/src/csm/CSM.csproj
+++ b/src/csm/CSM.csproj
@@ -66,6 +66,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Include="Commands\CommandReceiver.cs" />
+		<Compile Include=".\VehicleSyncSender.cs" />
 		<Compile Include="Commands\CommandInternal.cs" />
 		<Compile Include="Commands\Data\Game\SpeedPauseReachedCommand.cs" />
 		<Compile Include="Commands\Data\Internal\ClientJoiningCommand.cs" />
