--- a/src/api/CSM.API.csproj
+++ b/src/api/CSM.API.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Chat.cs" />
+    <Compile Include="IVehicleSyncSender.cs" />
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\CommandBase.cs" />
     <Compile Include="Commands\CommandHandler.cs" />
